# ugproj-detector

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  FaceDetector.cpp  README.md  main.cpp
conf/: apink.mrchu.720p.cfg  apink.mrchu.720p.new.cfg
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  face_tracker.cc  face_tracker.h  file_io.cc  file_io.h  lucas_kanade.cc  main.cc  main.cpp  structure.cc  structure.cpp  structure.h  structure.hpp  tags  visualizer.h
src/associator/: associator.cc  associator.cpp  associator.h  associator.hpp
src/celiu-optflow/: .CMakeLists.txt.swp  CMakeLists.txt  gaussian_pyramid.cc  gaussian_pyramid.h  image.h  image_file.cc  image_file.h  image_file_test.cc  image_pyramid.h  image_test.cc  image_util.cc  image_util.h  image_util_test.cc  opfl_test.cc  optical_flow.cc  optical_flow.h
src/clusterer/: CMakeLists.txt  clusterer.cc  clusterer.h  main.cc  vectorizer.cc  vectorizer.h  visualizer.cc  visualizer.h
src/detector/: detector.cpp  detector.h  detector.hpp
src/optflow/: flow_to_color.cpp  flow_to_color.hpp  manager.cpp  manager.hpp
src/src/: Makefile  cmake_install.cmake
src/src/celiu-optflow/: Makefile  cmake_install.cmake
src/tracker/: .face_tracker.cc.swo  CMakeLists.txt  associator.cc  associator.h  detector.cc  face_tracker.cc  face_tracker.h  main.cc
